# cmd_plot_simplified

./: README.md  pyproject.toml
cmd_plot/: main.py  plots.py  utils.py
tests/: tests.sh
